# kylearthurs.com

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
kylearthurs/: manage.py
kylearthurs/kylearthurs/: settings.py  settings_docker.py  urls.py  wsgi.py
kylearthurs/main/: admin.py  models.py  urls.py  views.py
kylearthurs/main/collections/: urls.py  views.py
kylearthurs/main/migrations/: 0001_initial.py
kylearthurs/main/static/main/styles/: index.css  main.css
kylearthurs/templates/main/: base.html  blog.html  business-finance.html  collections.html  dev.html  footer.html  index.html  nav.html  philosophy-philanthropy.html  philosophy.html
kylearthurs/templates/main/collections/: books.html  games.html  records.html
