[tool.poetry]
name = "kylearthurs"
version = "0.1.0"
description = "Code and resources for kylearthurs.com"
authors = ["lucid-0 <kylearthurs21@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
